--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Amigo Invisible LOSAZPI 2025</title>
+    <title>Amigo Invisible Navidad losAzpi 2025</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ Work Sans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background: #0f172a;
+        font-family: "Work Sans", Arial, sans-serif;
+
+        /* FOTO DE FONDO */
+        background-image: url("./foto.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+
+        /* Layout */
         color: #fff;
         display: flex;
         justify-content: center;
@@ -15,47 +32,125 @@
         height: 100vh;
         text-align: center;
         margin: 0;
+        position: relative;
+        overflow: hidden; /* para que la nieve no genere scroll */
       }
+
+      /* Capa oscura arriba de la foto para mejorar la lectura */
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        background: rgba(2, 6, 23, 0.65); /* ajustá 0.55–0.75 */
+        z-index: 0;
+      }
+
       .card {
-        background: #020617;
-        padding: 30px;
-        border-radius: 12px;
-        max-width: 400px;
+        position: relative;
+        z-index: 2;
+
+        background: rgba(2, 6, 23, 0.75);
+        padding: 34px 28px;
+        border-radius: 16px;
+        max-width: 520px; /* un poco más ancho */
+        width: min(92vw, 520px); /* más prolijo en celular */
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+        backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
       }
+
+      /* ✅ SOLO CAMBIO: tipografía + MÁS GRANDE (sigue responsivo) */
       h1 {
-        font-size: 20px;
-        margin-bottom: 20px;
-        letter-spacing: 1px;
+        font-size: clamp(28px, 4.2vw, 40px);
+        margin: 0 0 10px 0;
+        letter-spacing: 0.5px;
+        font-weight: 800;
       }
+
+      h2 {
+        font-size: clamp(22px, 3.4vw, 32px);
+        margin: 0 0 18px 0;
+        letter-spacing: 3px;
+        font-weight: 700;
+        opacity: 0.95;
+      }
+
       .name {
-        font-size: 24px;
-        font-weight: bold;
-        margin: 15px 0;
+        font-size: clamp(36px, 6.2vw, 54px);
+        font-weight: 900;
+        margin: 16px 0 10px;
       }
+
       .gift {
-        font-size: 18px;
-        margin-top: 10px;
+        font-size: clamp(26px, 4.6vw, 38px);
+        margin-top: 8px;
+        line-height: 1.25;
+        font-weight: 600;
       }
+
       .hint {
-        font-size: 12px;
-        opacity: 0.6;
+        font-size: clamp(16px, 2.6vw, 20px);
+        opacity: 0.8;
         margin-top: 20px;
+        font-weight: 500;
+      }
+
+      /* ✅ Decoración navideña con movimiento (sin GIF): nieve */
+      .snow {
+        position: fixed;
+        inset: 0;
+        z-index: 1;
+        pointer-events: none;
+      }
+
+      .flake {
+        position: absolute;
+        top: -10vh;
+        opacity: 0.85;
+        filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.25));
+        animation-name: fall;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+      }
+
+      @keyframes fall {
+        0% {
+          transform: translateY(-10vh) translateX(0);
+        }
+        100% {
+          transform: translateY(110vh) translateX(30px);
+        }
+      }
+
+      /* Ajuste para pantallas MUY chicas */
+      @media (max-width: 360px) {
+        .card {
+          padding: 26px 18px;
+        }
+        h2 {
+          letter-spacing: 2px;
+        }
       }
     </style>
   </head>
+
   <body>
+    <!-- Nieve animada -->
+    <div class="snow" id="snow"></div>
+
     <div class="card" id="content">
-      <h1>🎁 AMIGO INVISIBLE LOSAZPI 2025</h1>
+      <h1>🎁 Amigo Invisible Navidad 2025</h1>
+      <h2>LOS AZPI</h2>
       <div class="name" id="giver"></div>
       <div class="gift" id="receiver"></div>
       <div class="hint">No compartas este link 😉</div>
     </div>
 
     <script>
+      // Mapa: clave (hash) -> a quién le regala
       const data = {
         meme: "Xime",
-        lolo: "María del C.",
+        lolo: "María del Castillo",
         xime: "Juancru",
         diego: "Juana",
         luisito: "Tomás",
@@ -63,7 +158,7 @@
         sole: "Jose Foderé",
         mariadelc: "Male",
         juanvazquez: "Mer",
-        tomas: "Juan",
+        tomas: "Juan del Castillo",
         alfonso: "Joaco de Azpitarte",
         joseazpitarte: "Meme",
         mariajose: "Vicky",
@@ -82,24 +177,50 @@
         emi: "Coti",
         josefodere: "Joaquín Fernández",
         pachu: "Titi",
-        ina: "Luisito",
+        ina: "Luis del Castillo",
         joaquin: "Emi",
       };
 
-      const key = window.location.hash.replace("#", "").toLowerCase();
+      // Lee el hash (lo que va después del #) y lo normaliza
+      const key = decodeURIComponent(
+        window.location.hash.replace("#", "").toLowerCase().trim()
+      );
 
+      // Muestra el resultado o error
       if (data[key]) {
-        document.getElementById("giver").innerText = key.replace(
-          /(^|\s)\S/g,
-          (l) => l.toUpperCase()
-        );
+        const prettyName = key.replace(/(^|\s)\S/g, (l) => l.toUpperCase());
+        document.getElementById("giver").innerText = prettyName;
         document.getElementById("receiver").innerText =
           "le regalas a… " + data[key];
       } else {
         document.getElementById("content").innerHTML = `
-      <h1>🎁 AMIGO INVISIBLE LOSAZPI 2025</h1>
-      <p>Link inválido</p>
-    `;
+          <h1>🎁 Amigo Invisible Navidad 2025</h1>
+          <h2>Familia de Azpitarte</h2>
+          <p style="margin:0;">Link inválido</p>
+        `;
+      }
+
+      // ✅ Decoración navideña con movimiento: generador de nieve (sin GIF)
+      // (Funciona en celular y no pesa nada)
+      const snow = document.getElementById("snow");
+      const flakes = 22; // subí a 35 si querés más nieve
+
+      for (let i = 0; i < flakes; i++) {
+        const f = document.createElement("div");
+        f.className = "flake";
+        f.textContent = Math.random() > 0.2 ? "❄️" : "✨";
+
+        const left = Math.random() * 100; // vw
+        const size = 14 + Math.random() * 18; // px
+        const duration = 7 + Math.random() * 10; // s
+        const delay = Math.random() * 6; // s
+
+        f.style.left = left + "vw";
+        f.style.fontSize = size + "px";
+        f.style.animationDuration = duration + "s";
+        f.style.animationDelay = delay + "s";
+
+        snow.appendChild(f);
       }
     </script>
   </body>
